// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeAfterOrEqualTo fails when given a later date 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeAfterOrEqualTo()</intensity>

Expected date to be after or equal to <red>2019-09-01T22:00:00.000Z</color> but received:
  <red>2019-09-10T22:00:00.000Z</color>"
`;

exports[`.not.toBeAfterOrEqualTo fails when given an equal date 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBeAfterOrEqualTo()</intensity>

Expected date to be after or equal to <red>2019-09-01T22:00:00.000Z</color> but received:
  <red>2019-09-01T22:00:00.000Z</color>"
`;

exports[`.toBeAfterOrEqualTo fails when given an earlier date 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBeAfterOrEqualTo()</intensity>

Expected date to be after or equal to <red>2019-09-10T22:00:00.000Z</color> but received:
  <red>2019-09-01T22:00:00.000Z</color>"
`;
